--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -9,60 +9,21 @@
         android:id="@+id/recipeTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recipe"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/ingredientsTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
         android:layout_marginBottom="16dp"/>
 
-    <!-- Instructions -->
-    <TextView
-        android:id="@+id/instructionsTextView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Instructions"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/nutritionTitleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nutrition"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginBottom="8dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <!-- Nutrition labels -->
-        <!-- You can add more TextViews here to display other nutrition data -->
-        <TextView
-            android:id="@+id/caloriesTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Calories: "
-            android:textSize="16sp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <TextView
-            android:id="@+id/proteinTextView"
+            android:id="@+id/instructionsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Protein: "
             android:textSize="16sp"/>
 
-        <!-- Add more TextViews for other nutrition data as needed -->
+    </ScrollView>
 
-    </LinearLayout>
 </LinearLayout>
