--- a/app/src/main/res/layout/activity_user_generated_recipes.xml
+++ b/app/src/main/res/layout/activity_user_generated_recipes.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".UserGeneratedRecipesActivity">
 
-    <RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/userGeneratedRecipesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
